[package]
name = "cuda_std"
version = "0.2.2"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Standard library for CUDA with rustc_codegen_nvvm"
repository = "https://github.com/Rust-GPU/Rust-CUDA"
readme = "../../README.md"

[dependencies]
cuda_std_macros = { version = "0.2", path = "../cuda_std_macros" }
paste = "1.0.5"